Closed
Bug 1392057
Opened 7 years ago
Closed 7 years ago
Port bug |Bug 1389851 - Fix and enable clang's -Wunreachable-code-return warnings| to Thunderbird
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 57.0
People
(Reporter: jorgk-bmo, Assigned: jorgk-bmo)
Details
Attachments
(4 files, 5 obsolete files)
15.56 KB,
patch
|
Details | Diff | Splinter Review | |
7.37 KB,
patch
|
aceman
:
review+
|
Details | Diff | Splinter Review |
57.43 KB,
patch
|
Details | Diff | Splinter Review | |
8.51 KB,
patch
|
aceman
:
review+
|
Details | Diff | Splinter Review |
So far, two warnings turned into errors:
morkRowSpace.cpp:242:10: error: 'return' will never be executed
nsVCard.cpp:1170:12: error: 'return' will never be executed
Can be seen on try.
Patch coming.
Assignee | ||
Comment 1•7 years ago
|
||
Assignee | ||
Comment 2•7 years ago
|
||
Better comment.
Assignee | ||
Comment 3•7 years ago
|
||
Sadly there was more. In nsMessenger.cpp I fixed the twisted logic by flattening the if/else blocks. The changes look terrible but nothing really happened.
https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=f553f587b6e58ac7e8d11b9046b59ca35b840245
Attachment #8899229 -
Attachment is obsolete: true
Assignee | ||
Comment 4•7 years ago
|
||
More. New try:
https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=f97c5dcd0e1c855a418094fae278233272059c97
Attachment #8899231 -
Attachment is obsolete: true
Assignee | ||
Comment 5•7 years ago
|
||
Attachment #8899233 -
Attachment is obsolete: true
Assignee | ||
Comment 6•7 years ago
|
||
Patch without whitespace changes for easier review if anyone cares. Produced with
hg qdiff -w > no-white.patch
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/c2a027de14ed
Port bug 1389851: Fix clang's -Wunreachable-code-return warnings. rs=bustage-fix
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 8•7 years ago
|
||
That finally compiled, however, builds are currently orange due to mismatched build files.
Target Milestone: --- → Thunderbird 57.0
Assignee | ||
Comment 9•7 years ago
|
||
Follow-ip: Clean-up of whitespace in nsVCard.cpp. Terrible.
Assignee | ||
Comment 10•7 years ago
|
||
Here's the no-whitespace equivalent.
Assignee | ||
Comment 11•7 years ago
|
||
Attachment #8899253 -
Attachment is obsolete: true
Comment 12•7 years ago
|
||
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/d6c62fa41ae2
Follow-up: Fix whitespace issues in nsVCard.cpp. rs=whitespace-only DONTBUILD
Comment 13•7 years ago
|
||
Thanks.
Attachment #8899243 -
Flags: review+
Attachment #8899254 -
Flags: review+
Comment 14•7 years ago
|
||
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/19bea9a55bfb
Follow-up (take 2): Fix whitespace issues in nsVCard.cpp. rs=whitespace-only DONTBUILD
You need to log in
before you can comment on or make changes to this bug.
Description
•