Bug 1392057 - Port bug 1389851: Fix clang's -Wunreachable-code-return warnings. rs=bustage-fix

--HG--
extra : amend_source : 89e613579d2d297616b65343c2ec04fdc4996dbb