db/mork/src/morkRowSpace.cpp
@@ -194,12 +194,11 @@ morkRowSpace::CutAllRows(morkEnv* ev, morkPool* ioPool)
   if ( this->IsRowSpaceClean() )
     this->MaybeDirtyStoreAndSpace();
   
-  mork_num outSlots = mRowSpace_Rows.MapFill();
-
 #ifdef MORK_ENABLE_ZONE_ARENAS
   MORK_USED_2(ev, ioPool);
   return 0;
 #else /*MORK_ENABLE_ZONE_ARENAS*/
+  mork_num outSlots = mRowSpace_Rows.MapFill();
   morkZone* zone = &mSpace_Store->mStore_Zone;
   morkRow* r = 0; // old key row in the map
   mork_change* c = 0;
@@ -236,10 +235,9 @@ morkRowSpace::CutAllRows(morkEnv* ev, morkPool* ioPool)
     i.CutHereRow(ev, /*key*/ (morkRow**) 0);
 #endif /*MORK_ENABLE_PROBE_MAPS*/
   }
-#endif /*MORK_ENABLE_ZONE_ARENAS*/
-  
-  
+
   return outSlots;
+#endif /*MORK_ENABLE_ZONE_ARENAS*/
 }
 
 morkTable*
